--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,24 +7,19 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.3.4 <4.0.0'
 
-
 dependencies:
   flutter:
     sdk: flutter
-
-
   cupertino_icons: ^1.0.6
+  floor: ^1.4.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
   flutter_lints: ^3.0.0
-
+  floor_generator: ^1.4.0
+  build_runner: ^2.1.2
 
 flutter:
-
-
   uses-material-design: true
-
